src/objects/Marketing_Inventory_Order__c.object
<CustomObject>
    <description>The Marketing Inventory Order Object represents an individual order for new marketing inventory. It is comprised of many Marketing Inventory Items.</description>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <description>This is the date on which the status was set to complete.</description>
        <inlineHelpText>This is the date on which the status was set to complete.</inlineHelpText>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Marketing_Inventory__c</fullName>
        <label>Marketing Inventory</label>
        <referenceTo>Marketing_Inventory__c</referenceTo>
        <relationshipLabel>Marketing Inventory Orders</relationshipLabel>
        <relationshipName>Marketing_Inventory_Orders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>All Marketing Inventory Item Orders must be delivered in order for this status to be complete.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Marketing Inventory Order</label>
    <nameField>
        <label>Marketing Inventory Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing Inventory Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>